--- a/styles/globals.css
+++ b/styles/globals.css
@@ -125,16 +125,12 @@ body {
 
 @layer utilities {
   .custom-scrollbar::-webkit-scrollbar {
-    margin: 20px 3px;
-    width: 4px;
+    display: none;
   }
   .custom-scrollbar::-webkit-scrollbar-thumb {
-    background-color: #5e5e5e; /* Tailwind blue-500 */
-    border-radius: 9999px;
-    margin: 20px 3px;
+    display: none;
   }
   .custom-scrollbar::-webkit-scrollbar-track {
-    background-color: #e5e7eb; /* Tailwind gray-200 */
-    margin: 20px 3px;
+    display: none;
   }
 }
